@@ -2,6 +2,9 @@ xine-lib (1.1.7) (unreleased)
   * Support libdca (new name for libdts) by shuffling around the dts.h file.
   * Add support for MDHD version 1 atom in demux_qt. [bug #1679398]
   * Handle single-quoted attribute values in XML.
+  * The XML parser no longer ignores <?...?> elements.
+    Such elements are handled as if they were after the XML content for
+    compatibility reasons, though they must appear before it.
 
 xine-lib (1.1.6)
   * Split the DirectFB plugin into X11 and non-X versions.
